<resources>
    <string name="app_name">Just Java</string>
    <string name="hint_name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="whippedCream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="order">Order</string>

    <!-- for java referencing -->
    <string name="thankyou">Thank you!</string>
    <!-- to not translate names, Amy for example-->
    <string name="order_summary_name">Name: <xliff:g id="name" example="Amy">%s</xliff:g></string>

</resources>
